11-ingress/02-path-based-routing/01-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
spec:
  selector:
    matchLabels:
      app: product-app
  replicas: 2
  template:
    metadata:
      labels:
        app: product-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: product
          image: vinsdocker/k8s-ingress-product
          ports:
            - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product-app
  ports:
    - port: 80
      targetPort: 80
