11-ingress/02-path-based-routing/02-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  selector:
    matchLabels:
      app: user-app
  replicas: 3
  template:
    metadata:
      labels:
        app: user-app
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: user
          image: vinsdocker/k8s-ingress-user
          ports:
            - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user-app
  ports:
    - port: 80
      targetPort: 80
